client/src/styles/App.scss
// Common styles
$primaryTextColor: rgba(255, 255, 255, 0.87);
$backgroundColor: #242424;
$secondaryBackgroundColor: #444444;
$accentColor: #1a1a1a;
$borderColor: #a2a2a2;
$hoverBorderColor: #646cff;
$paddingBottom: clamp(60px, 20vw, 90px);

@mixin button-styles {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: $accentColor;
  color: $primaryTextColor;
  cursor: pointer;
  transition: border-color 0.25s;
  &:hover {
    border-color: $hoverBorderColor;
  }

  &:focus,
  &:focus-visible {
    outline: 4px auto -webkit-focus-ring-color;
  }
}

@mixin center {
  display: flex;
  justify-content: center;
  align-items: center;
}

// Reusable button mixin
@mixin main-button {
  @include button-styles;
  color: white;
}

// Reusable link styles
@mixin link-styles {
  color: white;
  text-decoration: none;
  @include button-styles();

  &:visited {
    color: white;
  }
}

// Shared properties for forms
@mixin form-styles {
  @include center();
  flex-direction: column;
  height: 100%;
  padding-bottom: $paddingBottom;
  .form-container {
    @include center();
    flex-direction: column;
    gap: 14px;
    background-color: $accentColor;
    padding: 25px;
    border-radius: 8px;

    .form-input {
      display: flex;
      width: 100%;
      justify-content: space-between;
      font-size: 16px;
      font-family: Arial, Helvetica, sans-serif;
    }

    div {
      display: flex;
      gap: 8px;
    }

    button {
      margin-top: 12px;
      background-color: $secondaryBackgroundColor;
      &:hover {
        border: $hoverBorderColor 1px solid;
      }
    }
  }
}

button {
  @include button-styles();
}

a {
  @include link-styles();
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: $backgroundColor;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}
body {
  margin: 0;
  display: flex;
  min-width: 320px;
  height: 100vh;
}
.home-page {
  @include center();
}
h1 {
  font-size: 3.2em;
  line-height: 1.1;
}
#root {
  box-sizing: border-box;
  width: 100%;
  text-align: center;
}
* {
  box-sizing: border-box;
}
nav, footer {
  position: absolute;
  width: 100%;
  display: flex;
  justify-content: center;
  left: 0;
  margin: 10px 0;
}
.github-link {
  all: unset;
  background-color: transparent;
  border: 0;
  padding: 0;
  color: $primaryTextColor;
  cursor: pointer;
  text-decoration: underline;
}
.hamburger-menu {
  position: absolute;
  bottom: clamp(60px, 18vw, 67px);;
  width: 100%;
  background-color: $secondaryBackgroundColor;
  display: flex;
  flex-direction: column;
  text-decoration: none;
  .menu-nav {
    margin-bottom: 10px;
    border: 2px solid $borderColor;
    border-radius: 8px;
  }
  p {
    margin: 0;
  }
  padding: 10px;
}
nav {
  $spacing: 3px;
  bottom: 0;
  display: flex;
  flex-direction: column;
  margin-bottom: 0;
  min-height: 50px;
  height: 19vw;
  max-height: 70px;
  z-index: 99;
  .main-nav-button {
    width: 100%;
  }
  .main-nav {
    display: flex;
    justify-content: space-between;
    align-items: end;
    background-color: $secondaryBackgroundColor;
    padding-top: $spacing;
    height: 100%;
    width: 100%;
    button {
      border-radius: 0;
    }
  }
  .main-nav-button, .menu-nav {
    @include link-styles();
    display: flex;
    height: 100%;
    border: 0;
    border-top: 2px solid $borderColor;
    padding: 0.6em 1.2em;
    font-size: 1em;
    font-weight: 500;
    font-family: inherit;
    background-color: $accentColor;
    text-decoration: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    
    border-radius: 0px;
    &:visited {
      color: white;
    }
    &:hover {
      border-color: $hoverBorderColor;
      color: white;
    }
    &:focus,
    &:focus-visible {
      outline: 4px auto -webkit-focus-ring-color;
    }
  }
  .more-menu {
    @include center();
  }
  .more-menu:hover {
    border-top: 2px solid $hoverBorderColor;
    border-left: none;
    border-right: none;
    border-bottom: none;
  }
  .side-nav {
    display: none;
  }
}
.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100%;
  min-height: 50px;
  padding-bottom: $paddingBottom;
  overflow-y: auto;
}
.admin-form {
  display: flex;
  margin-bottom: 10px;
}
a:visited {
  color: white;
}
.chat-list-page {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 24px;
  padding-bottom: $paddingBottom;
  width: 100%;
  height: 100%;
  a {
    @include link-styles();
    margin: 10px auto 20px auto;
  }
  .chat-list {
    box-sizing: border-box;
    display: grid;
    grid-template-columns: repeat( auto-fill, minmax(190px, 1fr) );
    height: max-content;
    width: 100%;
  }
}
.admin-inputs {
  display: flex;
  flex-direction: column;
  gap: 10px;
}
footer {
  display: none;
}
footer > p {
  margin: 0;
}
.chatroom-card {
  display: flex;
  min-height: 150px;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  padding: 6px 0;
  background-color: $accentColor;
  margin: 10px;
  border-radius: 8px;
  button {
    background-color: $secondaryBackgroundColor;
  }
}
.lock-status {
  display: flex;
  gap: 8px;
  align-items: center;
}

.chatroom-page {
  padding-left: 10px;
  padding-right: 10px;
  overflow-y: auto;
  .create-message {
    background-color: $accentColor;
    margin-top: 10px;
    width: 100%;
    margin-bottom: 10px;
  }
  .chatroom-header {
    display: flex;
    width: 100%;
    margin-top: 24px;
    flex-direction: column;
    gap: 10px;
    justify-content: space-between;
    h2 {
      margin: 0;
    }
    .chatroom-header-buttons {
      display: flex;
      justify-content: center;
      gap: 10px;
      width: auto;
    }
  }
  .message-form {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    width: 100%;
    button {
      border: $borderColor 1px solid;
      border-radius: 0;
      height: 42px;
      &:hover {
        border-color: $hoverBorderColor;
      }
    }
  }
  .message-box {
    width: 100%;
    border: $borderColor 1px solid;
    height: 42px;
    margin: 0;
    font-size: 16px;
    font-family: Arial, Helvetica, sans-serif;
    border-radius: 0px;
  }
  .message-box-label {
    position: absolute;
    height: 0;
    width: 0;
  }
}
.message-list {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  background-color: $borderColor;
  min-height: 300px;
  height: 100%;
  margin: 24px 0 10px;
  width: 100%;
  gap: 1px;
  overflow-y: auto;
  background-color: $accentColor;
  .message:last-child {
    .spacer {
      background-color: transparent;
    }
  }
  .message {
    padding: 10px 5px;
    background-color: $accentColor;
    width: 100%;
    .delete-modal {
      p {
        margin: 0;
      }
      .modal-text {
        display: flex;
        gap: 10px;
        flex-direction: column;
      }
      .modal-buttons {
        display: flex;
        gap: 10px;
        width: 100%;
        justify-content: center;
      }
      position: absolute;
      background-color: $secondaryBackgroundColor;
      border: white 1px solid;
      top: calc(50% - 100px);
      left: calc(50% - 47vw);
      height: 200px;
      width: 94vw;
      z-index: 99;
      border-radius: 8px;
      display: flex;
      flex-direction: column;
      justify-content: space-around;
    }
    .spacer {
      position: relative;
      margin-bottom: 5px;
      top: 0;
      left: 2%;
      width: 96%;
      height: 1px;
      background-color: $secondaryBackgroundColor;
    }
    .message-button-container {
      width: max-content;
      display: flex;
      margin: 0px 5px 0 0;
      gap: 5px;
      button {
        background-color: $secondaryBackgroundColor;
        width: min-content;
        @include center();
        height: min-content;
        width: min-content;
        padding: 0;
        width: 38px;
        height: 38px;
      }
    }
    .inline {
      text-align: start;
      display: flex;
      align-items: baseline;
      justify-content: space-between;
    }
    .message-username, .message-date, .message-content {
      display: inline-block;
      vertical-align: baseline;
    }
    .message-username {
      font-size: 1.3rem;
      margin: 0 15px 0 10px;
    }
    .message-date {
      font-size: .8rem;
    }
    .message-content {
      font-size: 1.1rem;
      width: 100%;
      text-align: left;
      overflow-wrap: break-word;
      padding: 0 10px 10px 10px;
    }
  }
  .no-messages-fallback {
    height: 100% !important;
    @include center();
  }
}
.sign-up-page, .log-in-page, .create-chat-page {
  @include form-styles();
  a {
    margin-top: 25px;
  }
}
svg {
  flex-shrink: 0;
}
@media (min-width: 500px) {
  .admin-form {
    flex-direction: column;
    button {
      margin: 0 auto;
    }
  }
  .chat-list-page {    
    .chat-list {
      grid-template-columns: repeat( auto-fill, minmax(300px, 1fr) );
    }
  }
}
@media (min-width: 1050px) {
  #root {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
    overflow-y: auto;
    min-height: 100vh;
    height: 100%;
  }
  nav {
    top: 0;
    margin-top: 0;
    a:hover, button:hover {
      border-bottom: $hoverBorderColor 1px solid !important;
    }
    .side-nav {
      display: block;
    }
  }
  .main {
    padding-bottom: 0;
    overflow-y: unset;
    height: unset !important;
    margin-bottom: auto !important;
  }
  .chatroom-page {
    width: 60vw;
    min-height: 80%;
    height: calc(100vh - (70px + 70px)) !important;
    margin: 0 auto 50px;
    .message-box {
      height: 100px;
    }
  }
  .home-page {
    margin: auto 0;
  }
  .chat-list-page {    
    .chat-list {
      padding: 0 200px 50px;
      grid-template-columns: repeat( auto-fill, minmax(500px, 1fr) ) ;
    }
    .message-list {
      min-height: 100%;
    }
  }
  .sign-up-page, .log-in-page, .create-chat-page {
    margin-top: 200px;
    .form-container {
      width: 350px;
    }
  }
  .more-menu {
    display: none !important;
  }
  .main-nav {
    padding-top: 0 !important;
  }
  .side-nav {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .side-nav:hover {
    border-bottom: 2px solid $hoverBorderColor;
    border-left: none;
    border-right: none;
    border-bottom: none;
  }
  nav, footer {
    position: static;
    display: flex !important;
  }
  footer {
    margin: 0;
    height: 70px;
    background-color: $accentColor;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .main-nav-button, .menu-nav {
    border-top: 0 !important;
    border-bottom: 2px solid $borderColor !important;
  }
  html {
    height: fit-content;
  }
  body {
    height: 100%;
  }
}

